style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: Arial, sans-serif;
    background: rgb(112,112,112);
    background: linear-gradient(354deg, rgba(112,112,112,1) 0%, rgba(0,0,0,1) 31%);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    height: 100%;
    width: 100%;
    overflow-x: hidden;
}

.Lambo_header {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

.Lambo_nav {
    font-size: 1.2vw;
    font-weight: 700;
    text-transform: uppercase;
    color: white;
    width: 80%;
    height: 2vh;
    width: 80%;
    transition: 0.5s ease-in-out all;
}

.Lambo_ul {
    list-style: none;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.nav_anchor {
    text-decoration: none;
    color: white;
    transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
}

.Lambo_links.active {
    text-decoration: underline; 
    font-weight: bold; 
    color: #fcbf24; 
  }

.nav_anchor:hover {
    color: red;
}

.ham_holder {
    position: relative;
}



.hamburger {
    width: 40px;
    height: 4px;
    background-color: #fff;
    border-radius: 2px;
    cursor: pointer;
    transition: 0.4s ease-in-out all;
    position: relative;
    z-index: 2;
}

.hamburger::before , .hamburger::after {
    content: "";
    position: absolute;
    right: 0;
    height: 4px;
    z-index: 2;
    background-color: #fff;
    border-radius: 2px;
    transition: 0.5s ease-in-out all;
}

.hamburger::before {
    top: -10px;
    width: 30px;
}

.hamburger::after {
    top: 10px;
    width: 30px;
}

.toggle_ham {
    position: absolute;
    top: 5%;
    right: 1.7%;
    height: 30px;
    width: 30px;
    z-index: 5;
    cursor: pointer;
    opacity: 0;
}
.hamburger, .toggle_ham {
    display: none;
}

.toggle_ham:checked ~ .hamburger {
    background-color: transparent;
}

.toggle_ham:checked ~ .hamburger::before {
    top: 0;
    transform: rotate(45deg);
}

.toggle_ham:checked ~ .hamburger::after {
    top: 0;
    transform: rotate(-45deg);
}

.toggle_ham:checked ~ .Lambo_nav {
    right: 0;
}

@media screen and (max-width: 768px) {
    .hamburger , .toggle_ham {
        display: block;
    }
    
    .Lambo_header {
        justify-content: space-between;
        margin: 0 1.5vw;
    }
    

    .Lambo_nav {
        position: absolute;
        top: 13.5%;
        right: -300px;
        height: 100%;
        width: 30%;
        backdrop-filter: blur(10px);
        z-index: 3;
        background-color: red;
        border-radius: 4vw 0 0 4vw;
    }
    
    .ham_holder:checked ~ .Lambo_nav {
        right: 0;
    }

    .Lambo_ul {
        margin-top: 2vh;
        flex-direction: column;
        gap: 5vh;
    }
    
    .nav_anchor {
        font-size: 2.5vw;
        color: white;
    }
    
     
}

/* the header part is Done here */

